--- a/DollyCamPlugin2/DollyCamPlugin2.vcxproj.filters
+++ b/DollyCamPlugin2/DollyCamPlugin2.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="interpstrategies\supportedstrategies.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="interpstrategies\catmullrominterp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dollycamplugin.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="interpstrategies\nbezierinterp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="interpstrategies\catmullrominterp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
