--- a/DollyCamPlugin2/DollyCamPlugin2.vcxproj.filters
+++ b/DollyCamPlugin2/DollyCamPlugin2.vcxproj.filters
@@ -45,40 +45,16 @@
     <ClInclude Include="interpstrategies\catmullrominterp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imconfig.h">
+    <ClInclude Include="interpstrategies\splineinterp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui.h">
+    <ClInclude Include="interpstrategies\tinyspline\tinysplinecpp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_additions.h">
+    <ClInclude Include="interpstrategies\tinyspline\tinyspline.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_impl_dx9.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_internal.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_rangeslider.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_tabs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_timeline.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imguivariouscontrols.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\stb_rect_pack.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\stb_textedit.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\stb_truetype.h">
+    <ClInclude Include="interpstrategies\Quaternions\quaternions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -113,29 +89,17 @@
     <ClCompile Include="dollycamplugin_gui.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui.cpp">
+    <ClCompile Include="interpstrategies\splineinterp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_additions.cpp">
+    <ClCompile Include="interpstrategies\tinyspline\tinyspline.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_draw.cpp">
+    <ClCompile Include="interpstrategies\tinyspline\tinysplinecpp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_impl_dx9.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_rangeslider.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_tabs.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imgui_timeline.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\BakkesMod-rewrite\BakkesMod Rewrite\bakkesmod\gui\imgui\imguivariouscontrols.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="interpstrategies\tinyspline\tinyspline.i" />
   </ItemGroup>
 </Project>
