--- a/DollyCamPlugin2/DollyCamPlugin2.vcxproj.filters
+++ b/DollyCamPlugin2/DollyCamPlugin2.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="interpstrategies\Quaternions\quaternions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="nlohmann\json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dollycamplugin.cpp">
